package co.edu.uniquindio.taller.ejercicio1.model;

public enum Categoria {

	ADMINISTRADOR, GERENTE, SUBGERENTE
}
